# AgentGuard

./: .dockerignore  .env.example  .gitignore  .gitmodules  AgentDogplan.md  Dockerfile  LICENSE  README.md  README_CN.md  conftest.py  docker-compose.e2e.yml  docker-compose.yml  openaiagentsoutput.txt  package.json  pyproject.toml  test.py  todo.md
.github/workflows/: docs.yml
agentguard/: __init__.py  __main__.py  facade.py
agentguard/adapters/: __init__.py  anthropic.py  autogen.py  base.py  crewai.py  custom.py  langchain.py  lite_llm.py  openai_agents.py
agentguard/api/: __init__.py  routes.py  schemas.py
agentguard/audit/: __init__.py  explain.py  logger.py  recorder.py  redactor.py  replay.py  trace.py
agentguard/degrade/: __init__.py  planner.py  redaction.py  transformers.py  variants.py
agentguard/examples/: dual_path_e2e.py  harness_demo.py  quickstart.py  remote_client_e2e.py  remote_runtime_demo.py
agentguard/graph/: __init__.py  builder.py  model.py  provenance.py  queries.py  sink_source_analysis.py
agentguard/harness/: __init__.py  agent_wrapper.py  event_bus.py  lifecycle.py  llm_thought_hook.py  runtime_context.py  sandbox.py  tool_wrapper.py
agentguard/labels/: __init__.py  registry.py
agentguard/llm/: __init__.py  backend.py  security_review.py
agentguard/middleware/: __init__.py  base.py  pii_detector.py  prompt_injection.py  rate_limiter.py  risk_classifier.py  uncertainty.py
agentguard/models/: __init__.py  decisions.py  errors.py  events.py  resources.py  security_review.py  sessions.py  tool_catalog.py  tools.py
agentguard/pdp_client/: __init__.py  auth.py  bridge.py  client.py  retry.py  schema.py
agentguard/pep/: __init__.py  decision_cache.py  enforcer.py  fallback.py  local_evaluator.py  policy_snapshot.py  policy_sync.py
agentguard/plugins/: __init__.py  base.py  llm_security.py  manager.py  thought_aligner.py
agentguard/policies/: __init__.py  builtin.py  dsl.py  matcher.py  rule.py
agentguard/policy/: __init__.py  routing.py
agentguard/review/: __init__.py  api.py  tickets.py
agentguard/runtime/: __init__.py  dispatcher.py  enrichment.py  event_bus.py  server.py  services.py  watchers.py
agentguard/schemas/: __init__.py  context.py  decision.py  events.py  risk.py
agentguard/sdk/: __init__.py  client.py  context.py  decorators.py  guard.py  middleware.py  wrappers.py
agentguard/skills/: __init__.py  base.py
config/: checkers.json  openclaw-agentguard.json  openclaw-default-tools.json  plugins.json
docs/: .bookignore  LANGS.md  README.md  book.json
examples/: _bootstrap.py  agentdog_pair_demo.py  autogenoutput.txt  dsl_skill_demo.py  langchainoutput.txt  langgraphOutput.txt  llamaoutput.txt  local_policy_demo.py  minimal_tool_guard.py  openaiagentsoutput.txt  openclawoutput.txt  policy_snapshot_demo.py  remote_client_e2e.py  remote_guard_demo.py  sandbox_demo.py  test_agent.py  test_agentdog_audit_langchain.py  test_autogen_emailcase.py  test_langchain_emailcase.py  test_langgraph_emailcase.py  test_llamaindex_emailcase.py  test_mcp_agent.py  test_openai_agents_emailcase.py  test_openclaw_agentguard_case.py  testoutput.txt
frontend/: README.md  __init__.py  app.py  mock_backend.py
rules/: 00_dsl_examples.rules  10_identity.rules  20_data_ops.rules  30_egress.rules  40_chain_defense.rules  agentdojo_policy.rules  block_email_send.json  block_email_send.rules  doc_retrieval_exfiltration.rules  loadtest_allow.rules  my_policy.rules  v3_trace_demo.rules
scripts/: e2e.sh  entrypoint.sh  loadtest_evaluate.py  logs.sh  run-dev.sh  run-frontend.sh  setup-dify-agentguard.sh  start.sh  stop.sh
skills/: __init__.py  base.py  loader.py  manifest.py  registry.py
tests/: test_agentdog_auditor.py  test_agentdog_plugin.py  test_app_state.py  test_attach_adapters.py  test_attach_llamaindex_adapters.py  test_auditors.py  test_checkers.py  test_client_registration.py  test_console.py  test_dify_adapter.py  test_dify_agent_chat_adapter.py  test_e2e_http.py  test_llamaindex_emailcase.py  test_llm_dsl_generator.py  test_local_engine.py  test_mcp_detection.py  test_parser.py  test_public_api_compat.py  test_real_adapters.py  test_sandbox.py  test_schemas.py  test_server_manager.py  test_skill_static_detection.py  test_skills.py  test_trace_pattern_runtime.py
(+792 files in other folders)
